@@ -5,6 +5,9 @@ Changelog
 1.3.4 (unreleased)
 ------------------
 
+- Added collective.geo.* integration
+  [lgraf]
+
 - Removed Products.Maps
   [lgraf]
 
